tests/compiler/case_exhaustiveness_enum_7.kk
let bomb = 
  \null => true
  \null => false

